[gd_scene load_steps=7 format=2]

[ext_resource path="res://Network_setup.gd" type="Script" id=1]
[ext_resource path="res://ressource/Base_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ressource/Tunic_header.jpg" type="Texture" id=3]
[ext_resource path="res://ressource/Down Hill.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Base_font.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
texture = ExtResource( 3 )
expand = true

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true

[node name="creat_server" type="Button" parent="Multiplayer_configure"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 150.0
margin_top = -53.0
margin_right = 400.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "crée un server"

[node name="join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -53.0
margin_right = -150.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "rejoindre un server"

[node name="username" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -168.0
margin_top = 100.0
margin_right = 168.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "entré votre username"

[node name="CanvasLayer" type="CanvasLayer" parent="Multiplayer_configure"]

[node name="adresse_ip_device" type="Label" parent="Multiplayer_configure/CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="start_game" type="Button" parent="Multiplayer_configure/CanvasLayer"]
margin_left = 47.0
margin_top = 25.0
margin_right = 177.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 5 )
text = "start game"

[node name="Label" type="Label" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -207.0
margin_top = 13.0
margin_right = 3.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "mortal fox combat
 2022"
align = 1

[node name="go_back" type="Button" parent="Multiplayer_configure"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -606.0
margin_top = -151.0
margin_right = -424.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 1 )
text = "control"
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Multiplayer_configure/creat_server" to="." method="_on_creat_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/join_server" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/CanvasLayer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Multiplayer_configure/go_back" to="." method="_on_go_back_pressed"]
